@@ -1,3 +1,6 @@
+JM 9/11/2004
+- added nextLong(long) to CommonRandom
+
 AM 6/11/2004
 - added event-based simulator in package peersim.edsim
 - added transport protocols in package peersim.transport
